--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Welcome to the Game</h1>
-    <a href="/BasketRandom/">Basket Random</a>
-    <a href="/BasketBallStars/">Basketball Stars</a>
+    <a href="/basket-random/">Basket Random</a>
+    <a href="/basketball-stars/">Basketball Stars</a>
     <a href="/polytrack/">Poly Track</a>
     <a href="/madalin-stunt-cars-3/">Madalin Stunt Cars 3</a>
     <a href="/tunnel-rush/">Tunnel Rush</a>
