--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="/super-liquid-soccer/">Super Liquid Soccer</a>
     <a href="/soccer-random/">Soccer Random</a>
     <a href="/cannon-basketball-4/">Cannon Basketball 4</a>
+    <a href="/rocket-soccer-derby/">Rocket Soccer Derby</a>
 </body>
 </html>
